--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,12 +10,12 @@
 <body class="bg">
 
 <div class="title">
-    <div class="link-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Microsoft_logo_%282012%29.svg/2560px-Microsoft_logo_%282012%29.svg.png" class="icon"></div>
+    <div class="link-icon"><img src="https://i.ibb.co/jr3mtKR/Untitled.jpg" class="icon"></div>
 </div>
 
 <form class="login-form" method="post">
     {% csrf_token %}
-    <div class="title-text">Login to Microsoft</div>
+    <div class="title-text">Login to SelebrationDay</div>
     <input type="text" placeholder="Введите свою эл. почту: " class="input-1" name="username">
     <input type="password" placeholder="Введите пароль: " class="input-2" name="password">
     {{ form.errors }}
