--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -10,12 +10,12 @@
 <body class="bg">
 
 <div class="title">
-    <div class="link-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Microsoft_logo_%282012%29.svg/2560px-Microsoft_logo_%282012%29.svg.png" class="icon"></div>
+    <div class="link-icon"><img src="https://i.ibb.co/jr3mtKR/Untitled.jpg" class="icon"></div>
 </div>
 
 <form class="register-form" method="post">
     {% csrf_token %}
-    <div class="title-text">Register to Microsoft</div>
+    <div class="title-text">Register to SelebrationDay</div>
     <input type="text" placeholder="Введите свой логин: " name='username' class="input-1">
     <input type="text" placeholder="Введите свою почту: " name='email' class="input-1">
     <input type="password" placeholder="Придумайте пароль: " name='password1' class="input-2">
